package sgx_server

import (
	"bytes"
	"crypto/aes"
	"crypto/cipher"
	"crypto/ecdsa"
	"crypto/rand"
	"crypto/sha256"
	"encoding/binary"
	"errors"
	"fmt"
	"log"
	"time"

	"github.com/aead/cmac"
	proto "github.com/golang/protobuf/proto"
)

// MSG4_SECRET is what is sent in the last message of SGX
// attestation, encrypted under a key shared between the server and
// the client during attestation. You can either change this to
// a different value, or dynamically generate secrets to send to
// different enclaves for various reasons.
const MSG4_SECRET = "REPLACE_ME_WITH_REAL_SECRET"

// Magic constants used to check the SGX attestation quote.
var (
	KDF_ID           = []byte{1, 0}
	UNLINKABLE_QUOTE = []byte{0, 0}
	LINKABLE_QUOTE   = []byte{1, 0}
)

// Magic constants used to check the SGX attestation quote.
// Acquired from https://api.trustedservices.intel.com/documents/sgx-attestation-api-spec.pdf
const (
	UNLINKABLE_QUOTE_INT = 0
	LINKABLE_QUOTE_INT   = 1
	KDF_ID_INT           = 1
	EC_COORD_SIZE        = 32
	EPID_GID_SIZE        = 4

	// CPU security version number.
	CPUSVN_IN_QUOTE = 48
	CPUSVN_SIZE     = 16

	// SSA frame extended feature set.
	// Currently not used, and is for potential future extensions.
	MISCSELECT_IN_QUOTE = 64
	MISCSELECT_SIZE     = 4

	// MREnclave starts at byte 112 in the quote.
	MRENCLAVE_IN_QUOTE = 112
	// MRSigner starts at byte 176 in the quote.
	MRSIGNER_IN_QUOTE = 176
	// MR values are geneated using SHA-256, so it's 32 bytes.
	MR_SIZE = 32

	// Enclave production ID.
	ISVPRODID_IN_QUOTE = 304
	ISVPRODID_SIZE     = 2

	// Enclave security version number.
	ISVSVN_IN_QUOTE = 306
	ISVSVN_SIZE     = 2

	// Enclave attributes start at 96, and is 16 bytes.
	ATTRIBUTES_IN_QUOTE = 96
	ATTRIBUTES_SIZE     = 16

	// Hash report starts at byte 368 in the quote
	HASH_REPORT_IN_QUOTE = 368
)

// Magic constants for deriving cryptographic keys for SGX sessions.
var (
	SMK_LABEL = []byte{'S', 'M', 'K'}
	VK_LABEL  = []byte{'V', 'K'}
	SK_LABEL  = []byte{'S', 'K'}
	MK_LABEL  = []byte{'M', 'K'}
)

// SGX Enclave flag bits. Acquired from sgx_attributes.h.
const (
	// If set, then the enclave is initialized
	SGX_FLAGS_INITTED = 0x0000000000000001
	// If set, then the enclave is debug
	SGX_FLAGS_DEBUG = 0x0000000000000002
	// If set, then the enclave is 64 bit
	SGX_FLAGS_MODE64BIT = 0x0000000000000004
	// If set, then the enclave has access to provision key
	SGX_FLAGS_PROVISION_KEY = 0x0000000000000010
	// If set, then the enclave has access to EINITTOKEN key
	SGX_FLAGS_EINITTOKEN_KEY = 0x0000000000000020
	// If set enclave uses KSS
	SGX_FLAGS_KSS = 0x000000000000008
)

// Session represents a logical connection between an SGX client and
// this server.
type Session interface {
	// Id returns the id associated with this session.
	// Usually hex encoded 16 byte random value, if created using
	// the default SessionManager provided in this module.
	Id() string

	// ProcessMsg1 processes the SGX message 1 (which actually
	// contains SGX message 0 as well), and updates the internal
	// states of the session.
	ProcessMsg1(msg1 *Msg1) error

	// CreateMsg2 returns the message 2 after processing
	// message 1.
	CreateMsg2() (*Msg2, error)

	// ProcessMsg3 receives the SGX message 3 (which contains
	// things like the enclave quote), and verifies the validity
	// of the message with the Intel Attestation Service.
	ProcessMsg3(msg3 *Msg3) error

	// CreateMsg4 returns the last message in SGX attestation.
	CreateMsg4() (*Msg4, error)

	// Authenticated returns if the session has been
	// authenticated.
	Authenticated() bool

	// Seal uses authenticated encryption to encrypt msg for the
	// SGX client. It uses AES GCM to encrypt the message with
	// a random nonce, and it prepends the nonce the resulting
	// ciphertext. The key used is SK derived during the
	// attestation process. This function MUST be called AFTER
	// ProcessMsg3 returns no error.
	Seal(msg []byte) ([]byte, error)

	// Open decrypts and verifies the integrity of a ciphertext
	// generated using Seal. In practice, the ciphertext will
	// be generated by the client which implements the same
	// Seal and Open protocol.
	Open(ciphertext []byte) ([]byte, error)

	// MAC generates a message authentication code using MK
	// derived during the attestation process. It uses CMAC
	// based on AES to genearate the MAC, which is the standard
	// for SGX.
	MAC(msg []byte) []byte

	// Expires returns an error if the sesion is expired already.
	Expired() error
}

type session struct {
	id      string
	timeout int

	release     bool
	ias         IAS
	mrenclaves  [][MR_SIZE]byte
	mrsigners   [][MR_SIZE]byte
	prodID      uint16
	prodSVN     uint16
	spid        []byte
	longTermKey *ecdsa.PrivateKey
	exgid       uint32
	gid         []byte
	ga          *PublicKey
	gb          *PublicKey

	// Various session keys.
	ephKey *ecdsa.PrivateKey
	kdk    []byte
	smk    []byte
	vk     []byte
	sk     []byte
	mk     []byte

	pseTrusted    bool
	pib           []byte
	advisories    []string
	authenticated bool

	aes cipher.AEAD

	// Count the number of encryption operations done in this
	// session. If sealCount goes over 2^{32}, it will throw
	// an error.
	sealCount int

	lastUsed time.Time
}

// NewSession creates a new session with id. If a session is not used
// for timeout minutes, then the session is considered invalid.
// NewSession also receives the interface to IAS, a list of
// MREnclaves, the SPID for this server, and the private key whose
// public key is baked into the enclave.
func NewSession(id string, release bool, timeout int, ias IAS, mrenclaves, mrsigners [][MR_SIZE]byte, spid []byte, longTermKey *ecdsa.PrivateKey, prodID, prodSVN uint16) Session {
	s := &session{
		id:      id,
		timeout: timeout,

		ias:         ias,
		mrenclaves:  mrenclaves,
		mrsigners:   mrsigners,
		prodID:      prodID,
		prodSVN:     prodSVN,
		release:     release,
		spid:        spid,
		longTermKey: longTermKey,

		pseTrusted:    false,
		authenticated: false,

		ephKey: generateKey(),

		sealCount: 0,

		lastUsed: time.Now(),
	}
	return s
}

func (sn *session) Id() string {
	return sn.id
}

func (sn *session) ProcessMsg1(msg1 *Msg1) error {
	if err := sn.Expired(); err != nil {
		return err
	} else if !checkMsg1Format(msg1) {
		return errors.New("Malformed message 1")
	}

	sn.exgid = msg1.Msg0.Exgid
	sn.ga = msg1.Ga
	sn.gid = msg1.Gid

	sn.lastUsed = time.Now()
	return nil
}

func (sn *session) CreateMsg2() (*Msg2, error) {
	if err := sn.Expired(); err != nil {
		return nil, err
	}

	gbx, gby, err := marshalPublicKey(&sn.ephKey.PublicKey)
	if err != nil {
		return nil, err
	}
	sn.gb = &PublicKey{
		X: gbx,
		Y: gby,
	}

	keyMsg := append(gbx, gby...)
	keyMsg = append(keyMsg, sn.ga.X...)
	keyMsg = append(keyMsg, sn.ga.Y...)

	sum := sha256.Sum256(keyMsg)
	r, s, err := ecdsa.Sign(rand.Reader, sn.longTermKey, sum[:])
	if err != nil {
		return nil, err
	}

	sig := &Signature{
		R: serializeBigInt(r),
		S: serializeBigInt(s),
	}

	enclavePub, err := unmarshalPublicKey(sn.ga.X, sn.ga.Y)
	if err != nil {
		return nil, err
	}

	sn.kdk, sn.smk = deriveLabelKey(sn.ephKey, enclavePub, SMK_LABEL)

	a := &A{
		Gb:        sn.gb,
		Spid:      sn.spid,
		QuoteType: UNLINKABLE_QUOTE,
		KdfId:     KDF_ID,
		Signature: sig,
	}

	sigRl, err := sn.ias.GetRevocationList(sn.gid)
	if err != nil {
		return nil, err
	}

	msg2 := &Msg2{
		A:         a,
		CmacA:     sn.cmacA(a),
		SigRlSize: uint32(len(sigRl)),
		SigRl:     sigRl,
	}

	sn.lastUsed = time.Now()
	return msg2, nil
}

func checkMR(mr [MR_SIZE]byte, mrs [][MR_SIZE]byte) error {
	// Check if a valid mr is found.
	found := false
	for _, valid := range mrs {
		if mr == valid {
			found = true
			break
		}
	}
	if !found {
		return errors.New("Invalid MR.")
	}
	return nil
}

func (sn *session) ProcessMsg3(msg3 *Msg3) error {
	if err := sn.Expired(); err != nil {
		return err
	}

	// Used in hash report so derived ahead of all the other keys.
	sn.vk = deriveLabelKeyFromBase(sn.kdk, VK_LABEL)

	if !bytes.Equal(msg3.M.Ga.X, sn.ga.X) {
		return errors.New("Msg3 GA mismatch.")
	} else if !bytes.Equal(msg3.M.Ga.Y, sn.ga.Y) {
		return errors.New("Msg3 GA mismatch.")
	} else if !bytes.Equal(sn.cmacM(msg3.M), msg3.CmacM) {
		return errors.New("Msg3 MAC on M mismatch.")
	} else if !bytes.Equal(sn.hashReport(), msg3.M.Quote[HASH_REPORT_IN_QUOTE:HASH_REPORT_IN_QUOTE+sha256.Size]) {
		return errors.New("Hash mismatch on report.")
	}

	pseTrusted, pib, advisories, err := sn.ias.VerifyQuoteAndPSE(msg3.M.Quote, msg3.M.PsSecurityProp)
	sn.pseTrusted = pseTrusted
	sn.pib = pib
	sn.advisories = advisories
	if err != nil {
		return err
	}

	// Check for valid MREnclave and MRSigner
	var mr [MR_SIZE]byte
	copy(mr[:], msg3.M.Quote[MRENCLAVE_IN_QUOTE:MRENCLAVE_IN_QUOTE+MR_SIZE])
	if err := checkMR(mr, sn.mrenclaves); err != nil {
		return errors.New("Invalid MREnclave.")
	}
	copy(mr[:], msg3.M.Quote[MRSIGNER_IN_QUOTE:MRSIGNER_IN_QUOTE+MR_SIZE])
	if err := checkMR(mr, sn.mrsigners); err != nil {
		return errors.New("Invalid MRSigner.")
	}

	// TODO: Check for CPU security version.
	prodID := binary.LittleEndian.Uint16(msg3.M.Quote[ISVPRODID_IN_QUOTE : ISVPRODID_IN_QUOTE+ISVPRODID_SIZE])
	if sn.prodID != prodID {
		return errors.New("Enclave production ID mismatch.")
	}

	prodSVN := binary.LittleEndian.Uint16(msg3.M.Quote[ISVSVN_IN_QUOTE : ISVSVN_IN_QUOTE+ISVSVN_SIZE])
	if sn.prodSVN > prodSVN {
		return errors.New("Enclave security version number is too low.")
	}

	// Check for enclave attributes
	if sn.release {
		attr := msg3.M.Quote[ATTRIBUTES_IN_QUOTE : ATTRIBUTES_IN_QUOTE+ATTRIBUTES_SIZE]
		if (attr[0] & SGX_FLAGS_DEBUG) != 0 {
			// debug flag is set
			return errors.New("Debug flag set in release mode.")
		}
		// TODO: What should we do about the other flags?
	}

	sn.authenticated = true

	sn.sk = deriveLabelKeyFromBase(sn.kdk, SK_LABEL)
	sn.mk = deriveLabelKeyFromBase(sn.kdk, MK_LABEL)

	block, err := aes.NewCipher(sn.sk)
	if err != nil {
		return err
	}
	sn.aes, err = cipher.NewGCM(block)
	if err != nil {
		return err
	}

	sn.lastUsed = time.Now()
	return nil
}

func (sn *session) CreateMsg4() (*Msg4, error) {
	if err := sn.Expired(); err != nil {
		return nil, err
	}

	var err error
	var ciphertext []byte
	if sn.authenticated {
		secret := []byte(MSG4_SECRET)
		ciphertext, err = sn.Seal(secret)
		if err != nil {
			return nil, err
		}
	}

	ar := &AttestationResult{
		EnclaveTrusted: sn.authenticated,
		PseTrusted:     sn.pseTrusted,
		Pib:            sn.pib,
		Advisories:     sn.advisories,
	}

	// authenticated, pseTrusted, pib are all set in ProcessMsg3.
	msg4 := &Msg4{
		Result: ar,
		Secret: ciphertext,
	}
	msg4.Cmac, err = sn.cmacMsg4(msg4)
	return msg4, err
}

func (sn *session) Authenticated() bool {
	return sn.authenticated
}

func (sn *session) Seal(msg []byte) ([]byte, error) {
	if err := sn.Expired(); err != nil {
		return nil, err
	} else if sn.sealCount > (1 << 32) {
		return nil, errors.New("Sealed too many messages.")
	}

	nonce := make([]byte, sn.aes.NonceSize())
	_, err := rand.Read(nonce)
	if err != nil {
		return nil, err
	}

	ciphertext := sn.aes.Seal(nil, nonce, msg, nil)
	sn.sealCount += 1
	sn.lastUsed = time.Now()
	return append(nonce, ciphertext...), nil
}

func (sn *session) Open(ciphertext []byte) ([]byte, error) {
	if err := sn.Expired(); err != nil {
		return nil, err
	}

	sn.lastUsed = time.Now()
	nonce := sn.aes.NonceSize()
	return sn.aes.Open(nil, ciphertext[:nonce], ciphertext[nonce:], nil)
}

func (sn *session) MAC(msg []byte) []byte {
	return cmacWithKey(msg, sn.mk)
}

func (sn *session) Expired() error {
	if sn.timeout == -1 { // timeout == -1 means it never expires
		return nil
	}

	now := time.Now()
	if now.After(sn.lastUsed.Add(time.Duration(sn.timeout) * time.Minute)) {
		return errors.New(fmt.Sprintf("Session [%s] timed out.", sn.id))
	}
	return nil
}

func checkMsg1Format(msg1 *Msg1) bool {
	return len(msg1.Ga.X) == EC_COORD_SIZE &&
		len(msg1.Ga.Y) == EC_COORD_SIZE &&
		len(msg1.Gid) == EPID_GID_SIZE
}

func cmacWithKey(msg, key []byte) []byte {
	block, err := aes.NewCipher(key[:])
	if err != nil {
		log.Fatal("Could not create AES for CMAC: ", err)
	}

	result, err := cmac.Sum(msg, block, aes.BlockSize)
	if err != nil {
		log.Fatal("Could not CMAC the message.")
	}
	return result
}

func (sn *session) cmacA(a *A) []byte {
	concat := append(a.Gb.X, a.Gb.Y...)
	concat = append(concat, a.Spid...)
	concat = append(concat, a.QuoteType...)
	concat = append(concat, a.KdfId...)
	concat = append(concat, a.Signature.R...)
	concat = append(concat, a.Signature.S...)
	return cmacWithKey(concat, sn.smk)
}

func (sn *session) cmacM(m *M) []byte {
	concat := append(m.Ga.X, m.Ga.Y...)
	concat = append(concat, m.PsSecurityProp...)
	concat = append(concat, m.Quote...)
	return cmacWithKey(concat, sn.smk)
}

func (sn *session) cmacMsg4(msg4 *Msg4) ([]byte, error) {
	ar, err := proto.Marshal(msg4.Result)
	if err != nil {
		return nil, err
	}
	concat := append(ar, msg4.Secret...)
	return cmacWithKey(concat, sn.smk), nil
}

func (sn *session) hashReport() []byte {
	concat := append(sn.ga.X, sn.ga.Y...)
	concat = append(concat, sn.gb.X...)
	concat = append(concat, sn.gb.Y...)
	concat = append(concat, sn.vk...)
	hash := sha256.Sum256(concat)
	return hash[:]
}
